# MetaCount

./: .gitignore  Linear_Model.ipynb  MANIFEST.in  README.html  README.ipynb  README.md  README.rst  Step By Step.ipynb  Tutorial.html  Tutorial.ipynb  Tutorial_Batch.ipynb  Tutorial_Batch.md  Tutorial_Batch.rst  linear_model.py  pyproject.toml  readme_convert.py  requirements.txt  requirements_dev.txt  run_package.py  setup.py  version_update.py  write_version.py
metacountregressor/: CMF_INTERPRETATION_GUIDE.md  DELIVERY_SUMMARY.md  Ex-16-3.csv  GA_CMF_AADT_JAX.py  PYPI_DESCRIPTION.md  README.md  START_HERE.md  Scoping - crash modification factors and functions_example.docx  Solvers_METAJAX.py  TODOFIXME.txt  __init__.py  _device_cust.py  _device_jax_cust.py  build_washington_presentation.py  cmf_package.py  cmf_technical_report.qmd  cmf_vs_count_comparison_slides.md  cmf_vs_count_general_audience.ipynb  decisions.csv  demo_cmf_interpretation.py  dredge_test.r  duration_main.py  experiment_lc_model_comparison.py  experiment_package.py  family_search.py  fitted_specifications.py  glm_multi.R  glmnet_poisson.r  glmulti.analysis.modgen.back  glmulti.analysis.mods.back  help.py  help_guide.py  helperprocess.py  jax_engine.py  jax_engine_n.py  jax_engine_n_just_in_case.py  latent_class_expeiment_runner.py  main.py  main_hpc.py  main_hpc_lc_patch.py  (+26 more)
metacountregressor/.claude/: settings.json  settings.local.json
metacountregressor/0/: log.csv  sln105_with_BIC_2022.8733226262602.tex  sln109_with_BIC_1885.477653719843.tex  sln10_with_BIC_2037.6598671361419.tex  sln110_with_BIC_1963.7710003653751.tex  sln111_with_BIC_1890.9410602258588.tex  sln112_with_BIC_2100.9328229722796.tex  sln113_with_BIC_1936.6602077010045.tex  sln114_with_BIC_2015.5105949216932.tex  sln116_with_BIC_1998.3369362751353.tex  sln118_with_BIC_1977.7734545839671.tex  sln11_with_BIC_2062.252816826588.tex  sln122_with_BIC_2008.3454394538344.tex  sln123_with_BIC_2090.627555836112.tex  sln125_with_BIC_1979.8969981283828.tex  sln128_with_BIC_1867.646601328084.tex  sln12_with_BIC_1873.9944791306589.tex  sln130_with_BIC_1891.1930726088794.tex  sln131_with_BIC_1844.3215639064485.tex  sln132_with_BIC_2070.679324552354.tex  sln133_with_BIC_1879.0363720216044.tex  sln135_with_BIC_1981.8314492271884.tex  sln136_with_BIC_1901.7252320357436.tex  sln137_with_BIC_2181.317378307475.tex  sln138_with_BIC_2048.3545243618414.tex  sln139_with_BIC_1918.4412961666985.tex  sln140_with_BIC_1802.410757139054.tex  sln141_with_BIC_2034.8720477874754.tex  sln142_with_BIC_1989.9684687836973.tex  sln143_with_BIC_2099.7746957905724.tex  sln144_with_BIC_1984.334429234299.tex  sln146_with_BIC_2050.335614666726.tex  sln149_with_BIC_1880.2076027687353.tex  sln14_with_BIC_1828.727910165149.tex  sln14_with_BIC_1835.1812667993731.tex  sln14_with_BIC_1867.5597662083892.tex  sln14_with_BIC_1881.9249098160997.tex  sln14_with_BIC_1929.8893656493958.tex  sln150_with_BIC_1947.4371394915509.tex  sln151_with_BIC_1960.3568308901995.tex  (+496 more)
metacountregressor/1/: log.csv  population_logger_pareto.csv  population_logger_strict_non_pareto.csv  sln1_with_BIC_1431.4071008318012.tex  sln1_with_BIC_1451.866675237203.tex  sln1_with_BIC_1496.796351500459.tex
metacountregressor/2/: log.csv
metacountregressor/R_resources_cmf/: .RData  .Rhistory  cmf-paper.htm  cmf_benefits_presentation.html  cmf_benefits_presentation.md  cmf_benefits_presentation_variant2.html  cmf_benefits_presentation_variant2.md  cmf_technical_report.html  cmf_technical_slides.html  cmf_technical_slides.qmd  cmf_technical_slides_clean - Copy.html  cmf_technical_slides_clean - Copy.qmd  cmf_technical_slides_clean - new.html  cmf_technical_slides_clean - new.qmd  cmf_technical_slides_clean - newg.html  cmf_technical_slides_clean - newg.qmd  cmf_technical_slides_clean.html  cmf_technical_slides_clean.qmd  cmf_technical_slides_notes.html  cmf_technical_slides_notes.qmd  ff.html  ff.qmd  mardown_ore.html
metacountregressor/backups/: cmf_technical_slides_clean - new.20260423_094545.qmd
metacountregressor/data/: .Rhistory  1848.csv  4000.csv  Ex-16-3.csv  Ex16-2.txt  Ex16-3.txt  Ex16_transformed.csv  GME_example.py  MichiganData.csv  TEST_FIT2.lpj  ThaiAccident.csv  artificial_ZA.csv  artificial_mixed_corr_2023_MOOF_copy.csv  ex163.csv  fdff.docx  fff.docx  glmm.R  latex_summary_output.tex  meta_synth_multi.csv  ny_c.csv  ny_c_for_nlogit.csv  rqc40516_MotorcycleQUT_engineer_crash.csv  styled_tablemm.docx  styled_tablemm.html  styled_temm.docx  sum_stats.R  tt.docx  ~$fdff.docx  ~$fff.docx  ~$yled_tablemm.docx
metacountregressor/hpc_jobs/: batch_job_rural_int.py  job_script.pbs
metacountregressor/hpc_ready/: README.md  requirements.txt  run_experiment.py  run_experiment.sh
metacountregressor/legacy_old/: README.md  TwinSplitter.py  app_main.py  cmf_vs_count_general_audience_slides.md  cross_sectional.py  jax_engine_n.py  jax_engine_n_just_in_case.py  main_hpc_refactor.py  main_old.py  metacount_bencmarking.py
metacountregressor/metacountregressor/: __init__.py  cmf_package.py  experiment_package.py  family_search.py  fitted_specifications.py  help_guide.py  model_constraints.py  output_config.py  sample_data.py  survival_models.py
metacountregressor/metacountregressor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
metacountregressor/metajax/: LICENSE  MANIFEST.in  pyproject.toml  setup.py
metacountregressor/results/: DynamicHarmony_seed0_20260307_142237.pkl  DynamicHarmony_seed0_20260307_142237_config.json  experiment_log.csv  hs_seed0_config0_20260307_130628.txt  hs_seed0_config0_20260307_132031.txt  sa_search_stats_seed0_config0_20260420_095131.txt  sa_search_stats_seed0_config0_20260420_111215.txt  sa_search_stats_seed0_config0_20260420_111725.txt  sa_search_stats_seed0_config0_20260420_112006.txt  sa_search_stats_seed0_config0_20260420_112700.txt  sa_search_stats_seed0_config0_20260420_113131.txt  sa_search_stats_seed0_config0_20260420_113339.txt  sa_search_stats_seed0_config0_20260420_114308.txt  sa_search_stats_seed0_config0_20260420_114502.txt  (+17 more)
(+1367 files in other folders)
