[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metacountregressor"
dynamic = ["version"]
description = "Metaheuristic-guided automated structure search for mixed count-data regression models"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
authors = [
    { name = "Zeke Ahern" },
    { name = "Paul Corry" },
    { name = "Alexander Paz" },
]
keywords = [
    "count regression",
    "mixed models",
    "negative binomial",
    "poisson",
    "random effects",
    "metaheuristic",
    "traffic safety",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "latextable>=1.0.0",
    "matplotlib>=3.0.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "psutil>=5.9",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "seaborn>=0.12",
    "statsmodels>=0.14",
    "texttable>=1.7",
    "tabulate>=0.9",
    "requests",
]

[project.urls]
Homepage = "https://github.com/zahern/MetaCount"
"Bug Tracker" = "https://github.com/zahern/MetaCount/issues"

[tool.setuptools.dynamic]
version = { file = "version.txt" }

[tool.setuptools.packages.find]
where = ["."]