[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metacountregressor"
version = "1.0.24"
description = "JAX-first hierarchical search and fitting for count, CMF, duration, and linear models."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "jax",
  "jaxlib",
  "jaxopt",
  "joblib",
  "latextable",
  "matplotlib",
  "numpy",
  "pandas",
  "psutil",
  "pygad",
  "scikit-learn",
  "scipy",
  "statsmodels",
  "texttable",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
include-package-data = true
py-modules = [
  "GA_CMF_AADT_JAX",
  "Solvers_METAJAX",
  "_version",
  "_device_cust",
  "_device_jax_cust",
  "cmf_package",
  "data_split_helper",
  "experiment_package",
  "halton",
  "helperprocess",
  "main_hpc",
  "main_hpc_lc_patch",
  "metaheuristics",
  "output_config",
  "pareto_file",
  "sample_data",
  "solution",
  "solvers_meta",
]

[tool.setuptools.packages.find]
include = ["metacountregressor*"]

[tool.setuptools.package-data]
metacountregressor = ["data/*.csv"]
