[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metacountregressor"
version = "1.0.33"
description = "JAX-first hierarchical search and fitting for count, CMF, duration, and linear models."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  # JAX ecosystem — required for all model fitting and search
  "jax>=0.4.1",
  "jaxlib>=0.4.1",
  "jaxopt>=0.6",
  # Scientific stack
  "joblib>=1.2",
  "latextable>=0.2",
  "matplotlib>=3.5",
  "numpy>=1.23",
  "pandas>=1.5",
  "psutil>=5.9",
  "scikit-learn>=1.1",
  "scipy>=1.9",
  "statsmodels>=0.13",
  "texttable>=1.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
include-package-data = true
py-modules = [
  "GA_CMF_AADT_JAX",
  "Solvers_METAJAX",
  "_version",
  "_device_cust",
  "_device_jax_cust",
  "cmf_package",
  "data_split_helper",
  "experiment_package",
  "fitted_specifications",
  "halton",
  "help_guide",
  "helperprocess",
  "main_hpc",
  "main_hpc_lc_patch",
  "metaheuristics",
  "model_constraints",
  "output_config",
  "pareto_file",
  "sample_data",
  "solution",
  "solvers_meta",
  "survival_models",
]

[tool.setuptools.packages.find]
include = ["metacountregressor*"]

[tool.setuptools.package-data]
metacountregressor = ["data/*.csv", "templates/*.ipynb"]
